@@ -7,6 +7,7 @@ OpenLDAP 2.3.38 Engineering
 	Fixed slapd select_backend/ManageDSAit (ITS#4986)
 	Fixed slapd-bdb missing index warning (ITS#5037)
 	Fixed slapd-bdb Quick index for ID 0 (ITS#5052)
+	Fixed slapd-bdb spurious empty DN warnings during add (ITS#5079)
 	Fixed slapd-relay configuration (ITS#4322,ITS#4340)
 	Fixed slapo-syncprov uninit'd vars (ITS#5048,#5049)
 	Fixed libldap ldap_add_result_entry (ITS#5056)
